welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
var c:Int=0


	do {
		for (x<-0 to getMondeHauteur()-1)
		{
			setPos(x,0)
			ecritMessage(c)
			c=c+1
		}
		
def d(){
	Direction.EAST();
	if (estFaceMur){return true}else{return false}
}

def d(){
	Direction.WEST();
	if (estFaceMur){return true}else{return false}
}

		if (d())
		{
			for (x<-(0 to getMondeHauteur()-1).reverse)
			{
				setPos(x,y+1)
				ecritMessage(c)
				c=c+1
			}
		}
		if (g())
		{
			for (x<-0 to getMondeHauteur()-1)
			{
				setPos(x,y+2)
				ecritMessage(c)
				c=c+1	
			}
		}
		
		}
	while (
		getX!=getMondeHauteur()-1
		&&
		getY!=getMondeHauteur()-2
		)
	
}
